--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,11 @@ name: build-and-push
 
 on:
   workflow_dispatch:
+    inputs:
+      version:
+        description: "Sure/addon version (e.g. 0.6.10)"
+        required: true
+        type: string
   push:
     tags:
       - "v*.*.*"   # например v0.0.1
@@ -12,7 +17,6 @@ permissions:
 
 env:
   IMAGE_BASENAME: sure_finance_ha
-  SURE_BASE_IMAGE: ghcr.io/firmfreez/sure:stable
 
 jobs:
   build:
@@ -33,8 +37,14 @@ jobs:
       - name: Version from tag
         id: ver
         run: |
-          VERSION="${GITHUB_REF_NAME#v}"
+          if [ "${GITHUB_EVENT_NAME}" = "workflow_dispatch" ]; then
+            VERSION="${{ inputs.version }}"
+          else
+            VERSION="${GITHUB_REF_NAME#v}"
+          fi
+          [ -n "$VERSION" ] || { echo "Version is empty"; exit 1; }
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+          echo "sure_base_image=ghcr.io/firmfreez/sure:$VERSION" >> "$GITHUB_OUTPUT"
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -56,7 +66,7 @@ jobs:
           file: ./sure/Dockerfile
           push: true
           build-args: |
-            SURE_BASE_IMAGE=${{ env.SURE_BASE_IMAGE }}
+            SURE_BASE_IMAGE=${{ steps.ver.outputs.sure_base_image }}
           platforms: ${{ matrix.platform }}
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ matrix.arch }}-${{ env.IMAGE_BASENAME }}:${{ steps.ver.outputs.version }}
